--- a/_layouts/handout.html
+++ b/_layouts/handout.html
@@ -5,7 +5,7 @@ layout: post
 
 <div class="col-md-12">
             <div class="card">
-                  <iframe src="{{ page.embed-url }}" width="100%" height="700" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen></iframe> 
+                  <iframe src="{{ page.embed-url }}" width="100%" height="700"></iframe> 
               <div class="card-body">
                   <h5 class="card-title">{{ page.title }}</h5>
                 <p class="card-text">{{ page.description }}</p>
