--- a/_includes/list-by-accessibility-info.html
+++ b/_includes/list-by-accessibility-info.html
@@ -1,6 +1,6 @@
 {% for collection in site.collections %}
 <!-- todo:: add handouts below -->
-{% if collection.label == "tutorials" or collection.label == "workshops" <!-- or collection.label == "handouts" --> %}
+{% if collection.label == "tutorials" or collection.label == "workshops" %} <!-- or collection.label == "handouts" -->
   <h2>{{ collection.label | capitalize }}</h2>
     <table class="table table-responsive-sm">
         <thead>
