--- a/_includes/list-by-accessibility-info.html
+++ b/_includes/list-by-accessibility-info.html
@@ -30,7 +30,7 @@
                                     {% endfor %}
                                 </ul>
                             {% else %}
-                                <small><em>Coming soon!</em></small>
+                                <small><em>Accessibility review in progress...</em></small>
                             {% endif %}
                         </td>
                     </tr>
