--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -11,3 +11,16 @@
     <script type="text/javascript" src="{{ "/assets/js/materialize-readies.js" | relative_url }}"></script>
     <script type="text/javascript" src="{{ "/assets/js/materialize.js" | relative_url }}"></script>
 {% endif %}
+
+{% if page.search-tables %}
+<script>
+$(document).ready(function(){
+  $("#myInput").on("keyup", function() {
+    var value = $(this).val().toLowerCase();
+    $("#myTable tr").filter(function() {
+      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+    });
+  });
+});
+</script>
+{% endif %}
