--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -24,3 +24,16 @@ $(document).ready(function(){
 });
 </script>
 {% endif %}
+
+{% if page.search-div %}
+<script>
+$(document).ready(function(){
+  $("#myInput").on("keyup", function() {
+    var value = $(this).val().toLowerCase();
+    $("#searchDiv div").filter(function() {
+      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+    });
+  });
+});
+</script>
+{% endif %}
