--- a/_includes/list-by-learning-outcome.html
+++ b/_includes/list-by-learning-outcome.html
@@ -1,6 +1,6 @@
 <div class="input-group md-form form-sm form-1 pl-0 mb-3">
   <div class="input-group-prepend">
-    <span class="input-group-text bg-primary" id="basic-text1"><i class="fas fa-search text-white" aria-hidden="true"></i></span>
+    <span class="input-group-text" style="background-color: #005587;" id="basic-text1"><i class="fas fa-search text-white" aria-hidden="true"></i></span>
     <label for="myInput" class="sr-only">Search for tutorials and workshops:</label>
   </div>
   <input class="form-control" id="myInput" type="text" aria-label="Search for tutorials and workshops" placeholder="try keywords like literature review or writing">
