--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,11 +44,13 @@ layout: default
     </div>
   </div>
 </header>
+    
 
 <div class="container">
   <div class="row">
     <div class="col-lg-10 col-md-11 col-xl-10 mx-auto">
         {{ content }}
+        {% include related-resources.html %}
         {% include info.html %}
         {% include prev-next.html %}
     </div>
