more related resources improvements - plus tag updates

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,6 +51,7 @@ layout: default
     <div class="col-lg-10 col-md-11 col-xl-10 mx-auto">
         {{ content }}
         {% if page.tags.size > 0 %}
+            <hr class="my-5">
             {% include related-resources.html %}
         {% endif %}
         {% include info.html %}
