--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -39,6 +39,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{"/handouts" | relative_url }}">Handouts</a>
         </li>
+        <!--<li class="nav-item">
+          <a class="nav-link" href="{{"/stem" | relative_url }}">STEM</a>
+        </li>-->
         <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
         </li>
