--- a/_layouts/team-member.html
+++ b/_layouts/team-member.html
@@ -133,7 +133,15 @@ layout: default
 <!-- Workshops -->
                 {% if workshop-author-list contains page.username %}
                         <div class="col-sm-6">
-                            <h4 class="mt-5">Workshops</h4>
+                            <!-- count -->
+                                {% assign counter = 0 %}
+                                {% for workshop in site.workshops %}
+                                    {% if workshop.authors contains page.username %}
+                                        {% assign counter=counter | plus:1 %}
+                                    {% endif %}
+                                {% endfor %}
+                            <!-- end count -->
+                            <h4 class="mt-5">{{ counter }} Workshop{% if counter > 1 %}s{% endif %}</h4>
                             <ul>
                                 {% for workshop in site.workshops %}
                                     {% if workshop.authors contains page.username %}
@@ -146,7 +154,15 @@ layout: default
 <!-- Tutorials -->
                 {% if tutorial-author-list contains page.username %}
                     <div class="col-sm-6">
-                        <h4 class="mt-5">Tutorials</h4>
+                            <!-- count -->
+                                {% assign counter = 0 %}
+                                {% for tutorial in site.tutorials %}
+                                    {% if tutorial.authors contains page.username %}
+                                        {% assign counter=counter | plus:1 %}
+                                    {% endif %}
+                                {% endfor %}
+                            <!-- end count -->
+                        <h4 class="mt-5">{{ counter }} Tutorial{% if counter > 1 %}s{% endif %}</h4>
                         <ul>
                             {% for tutorial in site.tutorials %}
                                 {% if tutorial.authors contains page.username %}
@@ -159,7 +175,15 @@ layout: default
 <!-- Handouts -->
                 {% if handout-author-list contains page.username %}
                     <div class="col-sm-6">
-                    <h4 class="mt-5">Handouts</h4>
+                        <!-- count -->
+                                {% assign counter = 0 %}
+                                {% for handout in site.handouts %}
+                                    {% if handout.authors contains page.username %}
+                                        {% assign counter=counter | plus:1 %}
+                                    {% endif %}
+                                {% endfor %}
+                            <!-- end count -->
+                    <h4 class="mt-5">{{ counter }} Handout{% if counter > 1 %}s{% endif %}</h4>
                         <ul>
                             {% for handout in site.handouts %}
                                 {% if handout.authors contains page.username %}
@@ -172,7 +196,15 @@ layout: default
 <!-- Sandbox Posts -->
                 {% if sandbox-author-list contains page.username %}
                     <div class="col-sm-6">
-                        <h4 class="mt-5">Sandbox Posts</h4>
+                        <!-- count -->
+                                {% assign counter = 0 %}
+                                {% for post in site.posts %}
+                                    {% if post.authors contains page.username %}
+                                        {% assign counter=counter | plus:1 %}
+                                    {% endif %}
+                                {% endfor %}
+                            <!-- end count -->
+                        <h4 class="mt-5">{{ counter }} Sandbox Post{% if counter > 1 %}s{% endif %}</h4>
                         <ul>
                             {% for post in site.posts %}
                                 {% if post.authors contains page.username %}
@@ -193,16 +225,48 @@ layout: default
                 <h3 class="mt-5">My Contributions</h3>
                 <small>
                     {% if workshop-contributor-list contains page.username %}
-                        <p>Workshops: {% for workshop in site.workshops %}{% if workshop.contributors contains page.username %}<a href="{{ workshop.url | relative_url}}">{{ workshop.title }}</a>{% if workshop.awards %}{% for award in workshop.awards %}{% include award-namify.html %} <i aria-hidden="true" class="fas fa-award" data-toggle="tooltip" data-placement="right" title="{{ awardName }}"></i><span class="sr-only">{{ awardName }}</span>{% endfor %}{% endif %} | {% endif %}{% endfor%}</p>
+                        <!-- count -->
+                                {% assign counter = 0 %}
+                                {% for workshop in site.workshops %}
+                                    {% if workshop.contributors contains page.username %}
+                                        {% assign counter=counter | plus:1 %}
+                                    {% endif %}
+                                {% endfor %}
+                            <!-- end count -->
+                        <p>{{ counter }} Workshops: {% for workshop in site.workshops %}{% if workshop.contributors contains page.username %}<a href="{{ workshop.url | relative_url}}">{{ workshop.title }}</a>{% if workshop.awards %}{% for award in workshop.awards %}{% include award-namify.html %} <i aria-hidden="true" class="fas fa-award" data-toggle="tooltip" data-placement="right" title="{{ awardName }}"></i><span class="sr-only">{{ awardName }}</span>{% endfor %}{% endif %} | {% endif %}{% endfor%}</p>
                     {% endif %}
                     {% if tutorial-contributor-list contains page.username %}
-                        <p>Tutorials: {% for tutorial in site.tutorials %}{% if tutorial.contributors contains page.username %}<a href="{{ tutorial.url | relative_url}}">{{ tutorial.title }}</a>{% if tutorial.awards %}{% for award in tutorial.awards %}{% include award-namify.html %} <i aria-hidden="true" class="fas fa-award" data-toggle="tooltip" data-placement="right" title="{{ awardName }}"></i><span class="sr-only">{{ awardName }}</span>{% endfor %}{% endif %} | {% endif %}{% endfor%}</p>
+                        <!-- count -->
+                                {% assign counter = 0 %}
+                                {% for tutorial in site.tutorials %}
+                                    {% if tutorial.contributors contains page.username %}
+                                        {% assign counter=counter | plus:1 %}
+                                    {% endif %}
+                                {% endfor %}
+                            <!-- end count -->
+                        <p>{{ counter }} Tutorials: {% for tutorial in site.tutorials %}{% if tutorial.contributors contains page.username %}<a href="{{ tutorial.url | relative_url}}">{{ tutorial.title }}</a>{% if tutorial.awards %}{% for award in tutorial.awards %}{% include award-namify.html %} <i aria-hidden="true" class="fas fa-award" data-toggle="tooltip" data-placement="right" title="{{ awardName }}"></i><span class="sr-only">{{ awardName }}</span>{% endfor %}{% endif %} | {% endif %}{% endfor%}</p>
                     {% endif %}
                     {% if handout-contributor-list contains page.username %}
-                        <p>Handouts: {% for handout in site.handouts %}{% if handout.contributors contains page.username %}<a href="{{ handout.url | relative_url}}">{{ handout.title }}</a>{% if handout.awards %}{% for award in handout.awards %}{% include award-namify.html %} <i aria-hidden="true" class="fas fa-award" data-toggle="tooltip" data-placement="right" title="{{ awardName }}"></i><span class="sr-only">{{ awardName }}</span>{% endfor %}{% endif %} | {% endif %}{% endfor%}</p>
+                            <!-- count -->
+                                {% assign counter = 0 %}
+                                {% for handout in site.handouts %}
+                                    {% if handout.contributors contains page.username %}
+                                        {% assign counter=counter | plus:1 %}
+                                    {% endif %}
+                                {% endfor %}
+                            <!-- end count -->
+                        <p>{{ counter }} Handouts: {% for handout in site.handouts %}{% if handout.contributors contains page.username %}<a href="{{ handout.url | relative_url}}">{{ handout.title }}</a>{% if handout.awards %}{% for award in handout.awards %}{% include award-namify.html %} <i aria-hidden="true" class="fas fa-award" data-toggle="tooltip" data-placement="right" title="{{ awardName }}"></i><span class="sr-only">{{ awardName }}</span>{% endfor %}{% endif %} | {% endif %}{% endfor%}</p>
                     {% endif %}
                     {% if sandbox-contributor-list contains page.username %}
-                        <p>Sandbox Posts: {% for post in site.posts %}{% if post.contributors contains page.username %}<a href="{{ post.url | relative_url}}">{{ post.title }}</a>{% if post.awards %}{% for award in post.awards %}{% include award-namify.html %} <i aria-hidden="true" class="fas fa-award" data-toggle="tooltip" data-placement="right" title="{{ awardName }}"></i><span class="sr-only">{{ awardName }}</span>{% endfor %}{% endif %} | {% endif %}{% endfor%}</p>
+                        <!-- count -->
+                                {% assign counter = 0 %}
+                                {% for post in site.posts %}
+                                    {% if post.contributors contains page.username %}
+                                        {% assign counter=counter | plus:1 %}
+                                    {% endif %}
+                                {% endfor %}
+                            <!-- end count -->
+                        <p>{{ counter }} Sandbox Posts: {% for post in site.posts %}{% if post.contributors contains page.username %}<a href="{{ post.url | relative_url}}">{{ post.title }}</a>{% if post.awards %}{% for award in post.awards %}{% include award-namify.html %} <i aria-hidden="true" class="fas fa-award" data-toggle="tooltip" data-placement="right" title="{{ awardName }}"></i><span class="sr-only">{{ awardName }}</span>{% endfor %}{% endif %} | {% endif %}{% endfor%}</p>
                     {% endif %}
                     </small>
             {% endif %}
