fix website link

--- a/_layouts/team-member.html
+++ b/_layouts/team-member.html
@@ -64,7 +64,7 @@ layout: default
                         <li class="list-inline-item"><a href="{{ page.linkedin }}" target="_blank" aria-label="LinkedIn profile"><i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn profile"></i></a></li>
                     {% endif %}
                     {% if page.website %}
-                        <li class="list-inline-item"><a href="{{ page.linkedin }}" target="_blank"aria-label="Website or more information"><i class="fas fa-info-circle" aria-hidden="true" title="Website or more information"></i></a></li>
+                        <li class="list-inline-item"><a href="{{ page.website }}" target="_blank"aria-label="Website or more information"><i class="fas fa-info-circle" aria-hidden="true" title="Website or more information"></i></a></li>
                     {% endif %}
                 </ul>
                     </div>
