--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,6 +34,9 @@
           <a class="nav-link" href="{{"/stem" | relative_url }}">STEM</a>
         </li>-->
         <li class="nav-item">
+          <a class="nav-link" href="{{"/instructors" | relative_url }}">For Instructors</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
         </li>
           <li class="nav-item">
