--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -33,9 +33,9 @@
         <!--<li class="nav-item">
           <a class="nav-link" href="{{"/stem" | relative_url }}">STEM</a>
         </li>-->
-        <li class="nav-item">
+        <!--li class="nav-item">
           <a class="nav-link" href="{{"/instructors" | relative_url }}">For Instructors</a>
-        </li>
+        </li-->
         <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
         </li>
