--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -5,7 +5,7 @@ layout: post
 <div class="row alert alert-info">
     <div class="col-md-6">
         <p><strong><!--<img src="{{ '/assets/images/icons/np_bear_66250_000000_84_fh.png' | relative_url }}" alt="UCLA Bruin Bear Icon" height="24px" />-->Affiliated with UCLA?</strong></p>
-        <p style="font-size: .75em;">If you are affiliated with UCLA and would like to receive certification of completion for this workshop, be sure to <em>Log in</em> and <em>Enroll</em> in <a href="https://ccle.ucla.edu/course/view/wire" target="_blank">WI+RE's CCLE site</a> before completing this workshop.</p>
+        <p style="font-size: .75em;">If you are affiliated with UCLA and would like to receive certification of completion for this workshop, be sure to <em>Log in</em> and <em>Enroll</em> in <a href="https://bruinlearn.ucla.edu/courses/148951" target="_blank">WI+RE's Bruin Learn site</a> before completing this workshop.</p>
     </div>
     <div class="col-md-6">
         <p><strong>Not affiliated with UCLA?</strong></p>
